syntax = "proto3";

option csharp_namespace = "ServidorAdministrativo.Protos";

package juegoProtoService;

service ServicioJuego {
	rpc ObtenerJuegos(MensajeVacio) returns (JuegosProto);
	rpc EsJuegoExistente(JuegoProto) returns(BoolProto);
	rpc BuscarJuegoPortTitulo(Mensaje) returns(JuegoProto);
	rpc JuegoUsuarios(UsuarioProto) returns(JuegosProto);
	rpc BuscarJuegoPorGenero(GeneroProto) returns(JuegoProto);
	rpc VerCatalogo(MensajeVacio) returns(MensajeVacio);
	rpc AdquirirJuegoPorUsuario(JuegoPorUsuarioProto) returns(JuegoProto);
	rpc BuscarJuegoPorCalificacion(MensajeInt) returns(JuegosProto);
	rpc EliminarJuego(Mensaje) returns(BoolProto);
	rpc AgregarCalificacion(CalificacionProto) returns(BoolProto);
}

message MensajeVacio { }

message JuegosProto{
	repeated JuegoProto juego = 1;
}

message CalificacionProto{
	int nota =1;
	string comentario =2;
	string usuario =3;
	stirng tituloJuegoo = 4;
}

message JuegoProto {
  string titulo = 1;
  string sinposis = 2;
  string Caratula = 3;
  string Genero = 4;
  int ranking = 5;
  int notas = 6;
 repeated UsuarioProto usuarios = 7;
 repeated CalificacionProto calificaciones = 8;
}

message BoolProto{
	bool boolProto = 1;
}

message Mensaje{ 
	string mensaje = 1;
}

message MensajeInt{ 
	int mensaje = 1;
}

message JuegoPorUsuarioProto{
	string tituloJuego = 1;
	string nombreUsuario=2;
}

message UsuarioProto{
	string nombre =1;
}

message GeneroProto{
	string genero = 1;
}
